--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,6 +34,8 @@ nav:
   - Visual Studio Code: gettingstarted/vscode.md
 - Hardware:
   - {Hardware Platforms: hardware/index.md}
+  - IoT Modules:
+    - ZM1: hardware/ZM1_module.md
   - Development Boards:
     - ZM1-DB: hardware/ZM1-Development-Board.md
   - Expansion Boards:
