--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -158,6 +158,7 @@ nav:
           - reference/libs/components/mcp2515/index.md
           - reference/libs/components/IIM42652/index.md
           - reference/libs/components/ds1307/index.md
+          - reference/libs/components/sw2812/index.md
       - Filters:
           - reference/libs/filters/iir.md
       - Command Line Interface:
