--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,11 +51,9 @@ nav:
     - {Product Innovation Kit: hardware/productInovv.md}
 - Zerynth Cloud:
   - Introduction: zCloud/index.md
-  - Zerynth Device Manager: zCloud/zdm_intro.md
-  - Zerynth Storage: zCloud/zstorage_intro.md
-  - Zerynth Dashboard: zCloud/zdashboard_intro.md
-  - Connect to Zerynth Cloud: zCloud/connect.md
-  - Over the Air Updates: zCloud/FOTA.md
+  - Device Manager and Data Storage: zCloud/zdm_intro.md
+  #- Zerynth Storage: zCloud/zstorage_intro.md
+  #- Zerynth Dashboard: zCloud/zdashboard_intro.md
 - Tutorials and Demos:
   - Tutorials:
     - tutorials/index.md
@@ -71,7 +69,9 @@ nav:
       - demos/4zerobox/hello_4zerobox.md
       - demos/4zerobox/industrial_kit.md
     - Zerynth Cloud:
+      - Connect to Zerynth Cloud: zCloud/connect.md
       - demos/zCloud/jobs_relays.md
+      - Over the Air Updates Single Device: zCloud/FOTA.md
       - demos/zCloud/FOTA_fleet.md
       - Integrate Microsoft Azure IoT with Zerynth Cloud: demos/zCloud/azure_integration.md
 - Technical Reference:
