--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -127,6 +127,7 @@ nav:
         - reference/libs/networking/index.md
         - reference/libs/networking/net.md
         - reference/libs/networking/wifi.md
+        - reference/libs/networking/wifisniff.md
         - reference/libs/networking/eth.md
         - reference/libs/networking/socket.md
       - Protocols:
