mobile: added docs
Signed-off-by: Elia Guglielmin <e.guglielmin@zerynth.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -87,6 +87,7 @@ nav:
       - Boards and Expansions:
         - reference/libs/expansions/index.md
         - reference/bsp/4zerobox_v9.md
+        - reference/bsp/4zerobox_mobile.md
         - reference/bsp/zm1_db.md
         - reference/libs/expansions/exp-io.md
         - reference/libs/expansions/exp-relay.md
