--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -53,25 +53,23 @@ nav:
   - Features and components: zCloud/index.md
   - Web application interface: zCloud/cloud_interface.md
 - Tutorials and demos:
-  - Tutorials:
-    - tutorials/index.md
-    - tutorials/cli.md
-    - Ethernet and Wifi: tutorials/wifi.md
-  - Demos:
-    - ZM1-DB and Expansion boards:
-      - EXP-RELAY Control Lamp: demos/zm1-db/exp-relay-lamp.md
-      - EXP-IO Industrial Data Aquisition : demos/zm1-db/exp-io-temperature.md
-      - EXP-PROTO Temperature Monitoring App : demos/zm1-db/ex-proto-bme280.md
-      - EXP-SER RS485 Interface : demos/zm1-db/exp-ser-rs485.md
-    - 4ZeroBox:
-      - demos/4zerobox/hello_4zerobox.md
-      - demos/4zerobox/industrial_kit.md
-    - Cloud:
-      - Connect to Zerynth Cloud: zCloud/connect.md
-      - demos/zCloud/jobs_relays.md
-      - Over the Air Updates Single Device: zCloud/FOTA.md
-      - demos/zCloud/FOTA_fleet.md
-      - Integrate Microsoft Azure IoT with Zerynth Cloud: demos/zCloud/azure_integration.md
+  - tutorials/cli.md
+  - Ethernet and Wifi: tutorials/wifi.md
+  - Expansion boards:
+    - Control AC and DC devices: tutorials/zm1-db/exp-relay-lamp.md
+    - Connect industrial sensors and devices: tutorials/zm1-db/exp-io-temperature.md
+    - Prototype modules and sensors: tutorials/zm1-db/ex-proto-bme280.md
+    - Communicate over RS232,RS485 and CAN protocol: tutorials/zm1-db/exp-ser-rs485.md
+    - Use cellular connectivity and GPS: tutorials/zm1-db/exp-connect-example.md
+  - 4ZeroBox:
+    - Hello 4ZeroBox: tutorials/4zerobox/hello_4zerobox.md
+    - tutorials/4zerobox/industrial_kit.md
+  - Cloud:
+    - Connect to Zerynth Cloud: zCloud/connect.md
+    - tutorials/zCloud/jobs_relays.md
+    - Introduction to FOTA: zCloud/FOTA.md
+    - FOTA for fleet of devices: tutorials/zCloud/FOTA_fleet.md
+    - Integration with 3rd party services: tutorials/zCloud/azure_integration.md
 - Technical reference:
     - {Introduction: reference/index.md}
     - SDK:
