--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -128,6 +128,7 @@ nav:
         - reference/libs/networking/eth.md
         - reference/libs/networking/cellular.md
         - reference/libs/networking/socket.md
+        - reference/libs/networking/ble.md
       - Protocols:
         - reference/libs/protocols/index.md
         - reference/libs/protocols/fins.md
