--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -175,6 +175,7 @@ nav:
           - reference/examples/zerynth-os/adc.md
           - reference/examples/zerynth-os/watchdog.md
     - Cloud APIs:
+      - reference/api/authentication/index.md
       - reference/api/zdm/index.md
       - reference/api/zstorage/index.md
       - reference/api/apps/index.md
